footer dark mode text color fixed, search icon shifting fixed

--- a/search/assets/css/main.css
+++ b/search/assets/css/main.css
@@ -74,6 +74,7 @@ button {
     line-height:60px;
     text-align:center;
     background-color: var(--secondaryColor);
+    color: var(--textColor);
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -87,4 +88,8 @@ button {
     list-style-type: none;
     
     margin-right: 2vh;
+  }
+
+  .form-flex{
+    display: flex;
   }
